<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pro.novatech.solutions.app.cicole.LoginActivity">
    <android.support.design.widget.AppBarLayout android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar android:id="@+id/toolbar" android:background="?colorPrimary" android:layout_width="fill_parent" android:layout_height="?actionBarSize" app:popupTheme="@style/ThemeOverlay.AppCompat.Light" app:layout_scrollFlags="enterAlways|scroll" />
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout android:orientation="vertical" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="?actionBarSize">
            <ImageView android:layout_gravity="center_horizontal" android:layout_width="180.0dip" android:layout_height="180.0dip" android:src="@drawable/icon_login" />
            <android.support.design.widget.TextInputLayout android:id="@+id/input_layout_email" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <EditText android:id="@+id/input_email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" android:hint="@string/hint_email"  />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:id="@+id/input_layout_password" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <EditText android:id="@+id/input_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" android:hint="@string/hint_password" android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>
            <Button android:textColor="@android:color/white" android:id="@+id/btn_signin" android:background="@color/colorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/btn_sign_in" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>




