<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
   >

<LinearLayout
    android:layout_width="match_parent" android:layout_height="wrap_content"

    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_account_circle_black_60dp"
        android:layout_gravity="center"/>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_vertical_margin">
            <TableRow android:background="@color/cardview_dark_background"
                >
                <TextView  android:layout_weight=".5"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" android:text="@string/profile_name"
                    android:textColor="#ffffff"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:textAlignment="viewEnd">

                </TextView>

                <TextView  android:layout_weight=".5"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" android:id="@+id/profile_name"
                    android:textColor="#ffffff"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:textAlignment="viewStart">

                </TextView>
            </TableRow>
            <TableRow android:background="@color/cardview_light_background">
                <TextView  android:layout_weight=".5"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" android:text="@string/profile_surname"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:textAlignment="viewEnd"/>



                <TextView  android:layout_weight=".5"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" android:id="@+id/profile_surname"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:textAlignment="viewStart"/>


            </TableRow>

            <TableRow android:background="@color/cardview_dark_background">
                <TextView  android:layout_weight=".5"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" android:text="@string/profile_email"
                    android:textColor="#ffffff"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:textAlignment="viewEnd" />



                <TextView  android:layout_weight=".5"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" android:id="@+id/profile_email"
                    android:textColor="#ffffff"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:textAlignment="viewStart"/>


            </TableRow>

            <TableRow android:background="@color/cardview_light_background">
                <TextView  android:layout_weight=".5"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" android:text="@string/profile_role"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:textAlignment="viewEnd"/>



                <TextView  android:layout_weight=".5"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" android:id="@+id/profile_role"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:textAlignment="viewStart"/>


            </TableRow>
            <TableRow android:background="@color/cardview_dark_background">
                <TextView  android:layout_weight=".5"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" android:text="@string/profile_created_at"
                    android:textColor="#ffffff"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:textAlignment="viewEnd" />



                <TextView  android:layout_weight=".5"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" android:id="@+id/profile_created_at"
                    android:textColor="#ffffff"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:textAlignment="viewStart"/>


            </TableRow>

            <TableRow android:background="@color/cardview_light_background">
                <TextView  android:layout_weight=".5"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" android:text="@string/phone_number"

                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:textAlignment="viewEnd" />



                <TextView  android:layout_weight=".5"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" android:id="@+id/phone_number"

                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:textAlignment="viewStart"/>


            </TableRow>

            <TableRow>
                <TextView android:layout_weight=".5"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"/>

               <!-- <Button  android:textColor="@android:color/white" android:id="@+id/btn_signin" android:background="@color/colorPrimary" android:layout_width="1dp" android:layout_weight=".5" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/edit_btn" />-->

            </TableRow>


        </TableLayout>


</LinearLayout>
</ScrollView>
