<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pro.novatech.solutions.app.cicole.StudentAttendanceActivity"
    android:orientation="vertical">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            />

    </android.support.design.widget.AppBarLayout>



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/activity_vertical_margin"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:visibility="gone"
                android:id="@+id/add_form">


                <DatePicker
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:hint="@string/absent_date"
                    android:id="@+id/absent_date"

                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/absent_reason"
                    android:id="@+id/absent_reason"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_submit"
                    android:shadowColor="@color/shadow_end_color"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimary"
                    android:id="@+id/btn_submit"

                    />



            </LinearLayout>
            </LinearLayout>

        </ScrollView>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/colorAccent">


                    <TextView
                        android:layout_marginLeft="3dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:textSize="14sp"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight=".4"
                        android:textStyle="bold"
                        android:ellipsize="marquee"
                        android:textColor="#ffffff"
                        android:text="@string/absent_date"/>

                    <TextView
                        android:textColor="#ffffff"
                        android:text="@string/absent_reason"
                        android:layout_marginLeft="3dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:layout_gravity="left"
                        android:textSize="14sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".6"
                        android:ellipsize="marquee"
                        />
                </LinearLayout>

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/absent_days">

                </ListView>

            </LinearLayout>

</LinearLayout>


